--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Jorge Pozo</h1>
             <h2>Ingeniero Comercial</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="Portfolio/CVJORGEPOZO.pdf" download="CVJORGEPOZO.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
