--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Jorge Pozo</h1>
             <h2>Ingeniero Comercial</h2>
-            <a href="Portfolio/CVJORGEPOZO.pdf" download="CVJORGEPOZO.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/JorgePozoGasc/Portfolio/raw/master/CVJORGEPOZO.pdf" download="CVJORGEPOZO.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -217,21 +217,6 @@
         </ul>
     </div>
     <!-- End #skills -->
-
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
-    </div>
-    <!-- End #contact -->
-
     <footer>
         <div class="container">
             <div class="row">
