--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Profesional en el campo de la ciencia de datos con experiencia en la integración de datos cuantitativos para generar soluciones efectivas y valor para las estrategias de negocio. Demuestro creatividad y habilidad en la identificación de oportunidades para mejorar procesos y decisiones basadas en datos. Soy un individuo responsable, autónomo y autoexigente, que se esfuerza por mantenerse actualizado con las últimas tendencias y tecnologías en el campo.
+			Además, poseo habilidades blandas en colaboración y trabajo en equipo, valorando el intercambio de conocimientos y experiencias con mis colegas. Me motiva la oportunidad de aprender y contribuir al crecimiento tanto profesional como personal de mi equipo. Con mi enfoque en resultados y soluciones, estoy seguro de ser un activo valioso para cualquier organización en el campo de la ciencia de datos.
                     </p>
                 </div>
             </div>
