--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#experience">Experience</a>
+                <a href="#about">Sobre mí</a>
             </li>
             <li>
                 <a href="#education">Education</a>
