--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Portfolio Jorge Pozo</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-    <div id="mobile-menu-open" class="shadow-large">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-    </div>
     <!-- End #mobile-menu-toggle -->
     <header>
         <div id="mobile-menu-close">
@@ -32,7 +29,7 @@
         <div id="lead-content">
             <h1>Jorge Pozo</h1>
             <h2>Ingeniero Comercial</h2>
-            <a href="https://github.com/JorgePozoGasc/Portfolio/raw/master/CVJORGEPOZO.pdf" download="CVJORGEPOZO.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/JorgePozoGasc/Portfolio/raw/master/CVJORGEPOZO.pdf" download="CVJORGEPOZO.pdf" class="btn-rounded-white">Descargar CV</a>
         </div>
         <!-- End #lead-content -->
 
@@ -55,8 +52,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Profesional en el campo de la ciencia de datos con experiencia en la integración de datos cuantitativos para generar soluciones efectivas y valor para las estrategias de negocio. Demuestro creatividad y habilidad en la identificación de oportunidades para mejorar procesos y decisiones basadas en datos. Soy un individuo responsable, autónomo y autoexigente, que se esfuerza por mantenerse actualizado con las últimas tendencias y tecnologías en el campo.
-			Además, poseo habilidades blandas en colaboración y trabajo en equipo, valorando el intercambio de conocimientos y experiencias con mis colegas. Me motiva la oportunidad de aprender y contribuir al crecimiento tanto profesional como personal de mi equipo. Con mi enfoque en resultados y soluciones, estoy seguro de ser un activo valioso para cualquier organización en el campo de la ciencia de datos.
+                        Profesional incursionando en el campo de la ciencia de datos, con experiencia en la integración de datos cuantitativos para generar soluciones efectivas y valor para las estrategias de negocio. 
+			Demuestro creatividad y habilidad en la identificación de oportunidades para mejorar procesos y decisiones basadas en datos. Soy una persona responsable, autónomo y autoexigente, enfocado en mantenerme actualizado con las últimas tendencias y tecnologías en el campo.
                     </p>
                 </div>
             </div>
@@ -65,7 +62,7 @@
 	
     <!-- End #about -->
 
-	<div id="projects" class="background-alt">
+	<div id="Projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -75,7 +72,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Proyecto Tienda de Deportes</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -91,7 +88,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Pendiente</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -108,10 +105,12 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>SQLt</li>
+            <li>SQL</li>
             <li>Python</li>
             <li>Excel</li>
             <li>R</li>
+	    <li>Power BI</li>
+	    <li>Lean</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -120,7 +119,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2023</span> Jorge Pozo
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -131,10 +130,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://jorgepozogasc.github.io/Portfolio/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/jorgepozo/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
