--- a/index.html
+++ b/index.html
@@ -15,18 +15,6 @@
 </head>
 
 <body>
-    <div id="mobile-menu-open" class="shadow-large">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-    </div>
-    <!-- End #mobile-menu-toggle -->
-    <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
-        <ul id="menu" class="shadow">
-        </ul>
-    </header>
-    <!-- End header -->
 
     <div id="lead">
         <div id="lead-content">
@@ -77,7 +65,7 @@
                     <div class="project-info">
                         <h3>Proyecto Tienda de Deportes</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Este proyecto tiene como objetivo mejorar el análisis de ventas por internet mediante la creación de paneles visuales interactivos. Los paneles permitirán una mejor comprensión de los productos vendidos, los clientes a los que se les vendieron y la evolución de las ventas a lo largo del tiempo. Además, se podrán aplicar filtros para analizar ventas por productos y clientes específicos. Este proyecto mejorará la eficiencia del análisis de ventas y permitirá tomar decisiones informadas basadas en los datos de ventas.
                         </p>
                         <a href="#">View Project</a>
                     </div>
