--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     <div class="project-info">
                         <h3>Proyecto Tienda de Deportes</h3>
                         <p>
-                            Este proyecto tiene como objetivo mejorar el análisis de ventas por internet mediante la creación de paneles visuales interactivos. Los paneles permitirán una mejor comprensión de los productos vendidos, los clientes a los que se les vendieron y la evolución de las ventas a lo largo del tiempo. 
-		            Además, se podrán aplicar filtros para analizar ventas por productos y clientes específicos. Este proyecto mejorará la eficiencia del análisis de ventas y permitirá tomar decisiones informadas basadas en los datos de ventas.
+                            Este proyecto tiene como objetivo mejorar el análisis de ventas por internet mediante la creación de paneles visuales interactivos que permiten una mejor comprensión de los productos vendidos, los clientes a los que se les vendieron y la evolución de las ventas a lo largo del tiempo. 
+		            Por lo tanto, contribuirá a mejorar la eficiencia del análisis de ventas y permitirá tomar decisiones informadas basadas en los datos de ventas.
                         </p>
                         <a href="https://github.com/JorgePozoGasc/Proyecto-Tienda-Deportiva.git">Ver Proyecto</a>
                     </div>
