--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://jorgepozogasc.github.io/Portfolio/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/JorgePozoGasc/Proyecto-Tienda-Deportiva.git" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/jorgepozo/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
